--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "panix/engine": "dev-master",
+        "panix/engine": "dev-bs5",
         "panix/wgt-taginput": "dev-master",
         "panix/wgt-leaflet": "dev-master"
     },
