--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "panix/engine": "dev-master",
         "panix/wgt-taginput": "dev-master",
-        "panix/wgt-leaflet": "dev-master"
+        "panix/wgt-leaflet": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
